@@ -41,6 +41,9 @@ Other Changes
 * SOLR-8338: in OverseerTest replace strings such as "collection1" and "state" with variable
   or enum equivalent. (Christine Poerschke)
 
+* SOLR-8333: Several API tweaks so that public APIs were no longer refering to private classes
+  (ehatcher, Shawn Heisey, hossman)
+
 ==================  5.4.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
